# opc-ceo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_ai_detection.py  test_ai_detection_detail.py
.claude/: config.json  hooks.json  settings.local.json
.claude/agents/: coach-agent.md  file-agent.md  finance-agent.md  knowledge-agent.md  schedule-agent.md  task-agent.md
.claude/schedules/: README.md  coach-self-evolution.bat  opc-coach-daily-evolution.bat  opc-coach-planning.bat  register-opc-coach-daily-evolution.ps1  register-opc-coach-planning.ps1  register-task.ps1  unregister-opc-coach-planning.ps1  unregister-task.ps1  view-logs-opc-coach-planning.ps1  view-logs.ps1  登录问题解决记录.md
.claude/scripts/: 周报生成.py
.claude/skills/claude-sdk-executor/scripts/: coverage.json  pyproject.toml  sessions.py
.claude/skills/claude-sdk-executor/scripts/tests/: __init__.py  test_sessions.py
config/: __init__.py  publisher.py  publisher_config.yaml  requirements.txt
content/: README.md
content/011-MCP是什么/: README.md
docs/: 内容发布规范.md  规划体系.md
docs/24h-round/: README.md
docs/v1-技能规划/: 任务清单.md  角色设计.md
docs/v2-技能规划/: README.md
docs/内容发布/: 011-MCP是什么一篇文章讲清楚_CSDN.md  2026年3月内容发布计划.md  内容目录规范.md  发布追踪.md
docs/战略规划/: Q1复盘报告.md  Q1需求分析报告.md  Q2执行计划.md  公司愿景.md  战略目标.md
docs/执行日志/: 2026-02-25.md  2026-02-26-任务执行记录.md  2026-02-26.md  记录规范.md
docs/技术规划/: 架构演进.md
docs/沟通文档/: 100项任务清单.md  CEO-用户沟通.md  Coach分析记录_2026-02-26.md  (+11 more)
scripts/: README.md  ai_detector.py  demo_ai_detector.py
tests/: test_ai_detector.py  test_publisher_framework.py  test_sessions.py
(+442 files in other folders)
