[project]
name = "claude-sdk-executor"
version = "3.1.0"
description = "Claude Code SDK 会话管理和任务执行"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "anthropic>=0.49.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[project.scripts]
claude-executor = "claude_sdk_executor.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "--cov=src/claude_sdk_executor --cov-report=term-missing"
